<resources>
    <string name="app_name" translatable="false">Signal</string>
    <string name="install_url" translatable="false">https://signal.org/install</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="please_wait">Please wait…</string>
    <string name="save">Save</string>
    <string name="note_to_self">Note to Self</string>
    <string name="AbstractNotificationBuilder_new_message">New message</string>
    <string name="AlbumThumbnailView_plus" translatable="false">\+%d</string>
    <string name="ApplicationMigrationActivity__signal_is_updating">Signal is updating…</string>
    <string name="ApplicationPreferencesActivity_currently_s">Currently: %s</string>
    <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">You haven\'t set a passphrase yet!</string>
    <plurals name="ApplicationPreferencesActivity_messages_per_conversation">
        <item quantity="one">%d message per conversation</item>
        <item quantity="other">%d messages per conversation</item>
    </plurals>
    <string name="ApplicationPreferencesActivity_delete_all_old_messages_now">Delete all old messages now?</string>
    <plurals name="ApplicationPreferencesActivity_this_will_immediately_trim_all_conversations_to_the_d_most_recent_messages">
        <item quantity="one">This will immediately trim all conversations to the most recent message.</item>
        <item quantity="other">This will immediately trim all conversations to the %d most recent messages.</item>
    </plurals>
    <string name="ApplicationPreferencesActivity_delete">Delete</string>
    <string name="ApplicationPreferencesActivity_disable_passphrase">Disable passphrase?</string>
    <string name="ApplicationPreferencesActivity_this_will_permanently_unlock_signal_and_message_notifications">This will permanently unlock Signal and message notifications.</string>
    <string name="ApplicationPreferencesActivity_disable">Disable</string>
    <string name="ApplicationPreferencesActivity_unregistering">Unregistering</string>
    <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Unregistering from Signal messages and calls…</string>
    <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls">Disable Signal messages and calls?</string>
    <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls_by_unregistering">Disable Signal messages and calls by unregistering from the server. You will need to re-register your phone number to use them again in the future.</string>
    <string name="ApplicationPreferencesActivity_error_connecting_to_server">Error connecting to server!</string>
    <string name="ApplicationPreferencesActivity_sms_enabled">SMS Enabled</string>
    <string name="ApplicationPreferencesActivity_touch_to_change_your_default_sms_app">Touch to change your default SMS app</string>
    <string name="ApplicationPreferencesActivity_sms_disabled">SMS Disabled</string>
    <string name="ApplicationPreferencesActivity_touch_to_make_signal_your_default_sms_app">Touch to make Signal your default SMS app</string>
    <string name="ApplicationPreferencesActivity_on">on</string>
    <string name="ApplicationPreferencesActivity_On">On</string>
    <string name="ApplicationPreferencesActivity_off">off</string>
    <string name="ApplicationPreferencesActivity_Off">Off</string>
    <string name="ApplicationPreferencesActivity_sms_mms_summary">SMS %1$s, MMS %2$s</string>
    <string name="ApplicationPreferencesActivity_privacy_summary">Screen lock %1$s, Registration lock %2$s</string>
    <string name="ApplicationPreferencesActivity_appearance_summary">Theme %1$s, Language %2$s</string>
    <plurals name="AppProtectionPreferenceFragment_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="DraftDatabase_Draft_image_snippet">(image)</string>
    <string name="DraftDatabase_Draft_audio_snippet">(audio)</string>
    <string name="DraftDatabase_Draft_video_snippet">(video)</string>
    <string name="DraftDatabase_Draft_location_snippet">(location)</string>
    <string name="DraftDatabase_Draft_quote_snippet">(reply)</string>
    <string name="AttachmentManager_cant_open_media_selection">Can\'t find an app to select media.</string>
    <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signal requires the Storage permission in order to attach photos, videos, or audio, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Storage\".</string>
    <string name="AttachmentManager_signal_requires_contacts_permission_in_order_to_attach_contact_information">Signal requires Contacts permission in order to attach contact information, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Contacts\".</string>
    <string name="AttachmentManager_signal_requires_location_information_in_order_to_attach_a_location">Signal requires Location permission in order to attach a location, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Location\".</string>
    <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Signal requires the Camera permission in order to take photos, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Camera\".</string>
    <string name="AttachmentUploadJob_uploading_media">Uploading media…</string>
    <string name="AttachmentUploadJob_compressing_video_start">Compressing video…</string>
    <string name="AudioSlidePlayer_error_playing_audio">Error playing audio!</string>
    <string name="BlockedContactsActivity_blocked_contacts">Blocked contacts</string>
    <string name="BucketedThreadMedia_Today">Today</string>
    <string name="BucketedThreadMedia_Yesterday">Yesterday</string>
    <string name="BucketedThreadMedia_This_week">This week</string>
    <string name="BucketedThreadMedia_This_month">This month</string>
    <string name="BucketedThreadMedia_Large">Large</string>
    <string name="BucketedThreadMedia_Medium">Medium</string>
    <string name="BucketedThreadMedia_Small">Small</string>
    <string name="CallScreen_Incoming_call">Incoming call</string>
    <string name="CameraActivity_image_save_failure">Failed to save image.</string>
    <string name="CameraXFragment_tap_for_photo_hold_for_video">Tap for photo, hold for video</string>
    <string name="CameraXFragment_capture_description">Capture</string>
    <string name="CameraXFragment_change_camera_description">Change camera</string>
    <string name="CameraXFragment_open_gallery_description">Open gallery</string>
    <string name="CameraContacts_recent_contacts">Recent contacts</string>
    <string name="CameraContacts_signal_contacts">Signal contacts</string>
    <string name="CameraContacts_signal_groups">Signal groups</string>
    <string name="CameraContacts_you_can_share_with_a_maximum_of_n_conversations">You can share with a maximum of %d conversations.</string>
    <string name="CameraContacts_select_signal_recipients">Select Signal recipients</string>
    <string name="CameraContacts_no_signal_contacts">No Signal contacts</string>
    <string name="CameraContacts_you_can_only_use_the_camera_button">You can only use the camera button to send photos to Signal contacts. </string>
    <string name="CameraContacts_cant_find_who_youre_looking_for">Can\'t find who you\'re looking for?</string>
    <string name="CameraContacts_invite_a_contact_to_join_signal">Invite a contact to join Signal</string>
    <string name="CameraContacts__menu_search">Search</string>
    <string name="ClearProfileActivity_remove">Remove</string>
    <string name="ClearProfileActivity_remove_profile_photo">Remove profile photo?</string>
    <string name="CommunicationActions_no_browser_found">No web browser found.</string>
    <string name="CommunicationActions_a_cellular_call_is_already_in_progress">A cellular call is already in progress.</string>
    <string name="CommunicationActions_start_video_call">Start video call?</string>
    <string name="CommunicationActions_start_voice_call">Start voice call?</string>
    <string name="CommunicationActions_cancel">Cancel</string>
    <string name="CommunicationActions_call">Call</string>
    <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Your safety number with %1$s has changed. This could either mean that someone is trying to intercept your communication, or that %2$s simply reinstalled Signal.</string>
    <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">You may wish to verify your safety number with this contact.</string>
    <string name="ConfirmIdentityDialog_accept">Accept</string>
    <string name="ContactsCursorLoader_recent_chats">Recent chats</string>
    <string name="ContactsCursorLoader_contacts">Contacts</string>
    <string name="ContactsCursorLoader_groups">Groups</string>
    <string name="ContactsCursorLoader_phone_number_search">Phone number search</string>
    <string name="ContactsCursorLoader_username_search">Username search</string>
    <string name="ContactsDatabase_message_s">Message %s</string>
    <string name="ContactsDatabase_signal_call_s">Signal Call %s</string>
    <string name="ContactNameEditActivity_given_name">Given name</string>
    <string name="ContactNameEditActivity_family_name">Family name</string>
    <string name="ContactNameEditActivity_prefix">Prefix</string>
    <string name="ContactNameEditActivity_suffix">Suffix</string>
    <string name="ContactNameEditActivity_middle_name">Middle name</string>
    <string name="ContactShareEditActivity_type_home">Home</string>
    <string name="ContactShareEditActivity_type_mobile">Mobile</string>
    <string name="ContactShareEditActivity_type_work">Work</string>
    <string name="ContactShareEditActivity_type_missing">Other</string>
    <string name="ContactShareEditActivity_invalid_contact">Selected contact was invalid</string>
    <string name="ConversationItem_error_not_delivered">Send failed, tap for details</string>
    <string name="ConversationItem_received_key_exchange_message_tap_to_process">Received key exchange message, tap to process.</string>
    <string name="ConversationItem_group_action_left">%1$s has left the group.</string>
    <string name="ConversationItem_click_to_approve_unencrypted">Send failed, tap for unsecured fallback</string>
    <string name="ConversationItem_click_to_approve_unencrypted_sms_dialog_title">Fallback to unencrypted SMS?</string>
    <string name="ConversationItem_click_to_approve_unencrypted_mms_dialog_title">Fallback to unencrypted MMS?</string>
    <string name="recipient_preferences__mute_conversation">Mute conversation</string>
    <string name="recipient_preferences__custom_notifications">Custom notifications</string>
    <string name="recipient_preferences__notification_sound">Notification sound</string>
    <string name="recipient_preferences__vibrate">Vibrate</string>
    <string name="recipient_preferences__block">Block</string>
    <string name="recipient_preferences__color">Color</string>
    <string name="recipient_preferences__view_safety_number">View safety number</string>
    <string name="recipient_preferences__chat_settings">Chat settings</string>
    <string name="recipient_preferences__privacy">Privacy</string>
    <string name="recipient_preferences__call_settings">Call settings</string>
    <string name="recipient_preferences__ringtone">Ringtone</string>
    <string name="recipient_preferences__about">About</string>
</resources>