<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">



    <PreferenceCategory android:contentDescription="recipient_preferences__about" android:key="about" android:title="@string/recipient_preferences__about">

        <org.thoughtcrime.securesms.preferences.widgets.ContactPreference android:key="pref_key_number" android:persistent="false" />

    </PreferenceCategory>



    <PreferenceCategory android:key="about_divider" android:layout="@layout/preference_divider" />



    <PreferenceCategory android:contentDescription="recipient_preferences__chat_settings" android:key="notification_settings" android:title="@string/recipient_preferences__chat_settings">

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat android:contentDescription="recipient_preferences__mute_conversation" android:defaultValue="false" android:disableDependentsState="true" android:key="pref_key_recipient_mute" android:persistent="false" android:title="@string/recipient_preferences__mute_conversation" />



        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat android:contentDescription="recipient_preferences__custom_notifications" android:defaultValue="false" android:key="pref_key_recipient_custom_notifications" android:persistent="false" android:title="@string/recipient_preferences__custom_notifications" />



        <org.thoughtcrime.securesms.preferences.widgets.SignalPreference android:contentDescription="recipient_preferences__notification_sound" android:dependency="pref_key_recipient_mute" android:key="pref_key_recipient_ringtone" android:persistent="false" android:title="@string/recipient_preferences__notification_sound" />



        <org.thoughtcrime.securesms.preferences.widgets.SignalListPreference android:contentDescription="recipient_preferences__vibrate" android:defaultValue="0" android:dependency="pref_key_recipient_mute" android:entries="@array/recipient_vibrate_entries" android:entryValues="@array/recipient_vibrate_values" android:key="pref_key_recipient_vibrate" android:persistent="false" android:title="@string/recipient_preferences__vibrate" />



        <org.thoughtcrime.securesms.preferences.widgets.ColorPickerPreference app:numColumns="5" android:contentDescription="recipient_preferences__color" android:defaultValue="@android:color/black" android:key="pref_key_recipient_color" android:negativeButtonText="@null" android:persistent="false" android:positiveButtonText="@null" android:title="@string/recipient_preferences__color" />

    </PreferenceCategory>



    <PreferenceCategory android:layout="@layout/preference_divider" />



    <PreferenceCategory android:contentDescription="recipient_preferences__call_settings" android:key="call_settings" android:title="@string/recipient_preferences__call_settings">



        <org.thoughtcrime.securesms.preferences.widgets.SignalPreference android:contentDescription="recipient_preferences__ringtone" android:key="pref_key_recipient_call_ringtone" android:persistent="false" android:title="@string/recipient_preferences__ringtone" />



        <org.thoughtcrime.securesms.preferences.widgets.SignalListPreference android:contentDescription="recipient_preferences__vibrate" android:defaultValue="0" android:entries="@array/recipient_vibrate_entries" android:entryValues="@array/recipient_vibrate_values" android:key="pref_key_recipient_call_vibrate" android:persistent="false" android:title="@string/recipient_preferences__vibrate" />



    </PreferenceCategory>



    <PreferenceCategory android:key="divider" android:layout="@layout/preference_divider" />



    <PreferenceCategory android:contentDescription="recipient_preferences__privacy" android:key="privacy_settings" android:title="@string/recipient_preferences__privacy">



        <Preference android:contentDescription="recipient_preferences__view_safety_number" android:enabled="false" android:key="pref_key_recipient_identity" android:persistent="false" android:title="@string/recipient_preferences__view_safety_number" />



        <Preference android:contentDescription="recipient_preferences__block" android:key="pref_key_recipient_block" android:persistent="false" android:title="@string/recipient_preferences__block" />



    </PreferenceCategory>



</PreferenceScreen>
